# idinxMessenger

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp
client/src/application/: Application.cpp  Application.hpp  Connection.cpp  Connection.hpp
client/src/auth/: Connection.cpp  Connection.hpp  Login.cpp  Login.hpp  Registration.cpp  Registration.hpp
client/src/database/: SQLiteDatabase.cpp  SQLiteDatabase.hpp
client/src/http/: HttpRequest.hpp
client/src/messaging/: Message.cpp  Message.hpp  MessageParser.cpp  MessageParser.hpp  PublicKeyExchangeRequest.cpp  PublicKeyExchangeRequest.hpp
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
server/src/config/: ConfigManager.cpp  ConfigManager.hpp  DatabaseConfig.cpp  DatabaseConfig.hpp  IConfig.hpp  ServerConfig.cpp  ServerConfig.hpp
server/src/database/: Connection.cpp  Connection.hpp
server/src/http/: IRoute.cpp  IRoute.hpp  KeyRequester.cpp  KeyRequester.hpp  Login.cpp  Login.hpp  MessageReceiver.cpp  MessageReceiver.hpp  MessageSender.cpp  MessageSender.hpp  Registration.cpp  Registration.hpp  Router.cpp  Router.hpp
server/src/tcp_server/: TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
server/src/utils/: Hashing.hpp  Logger.cpp  Logger.hpp
server/submodules/: CMakeLists.txt
